--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -1,6 +1,33 @@
-.header {
-    background-color: greenyellow;
+header {
+    background-color: #006E90;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+    padding: 15px;
+    height: 20%;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+}
+
+nav ul li {
+    margin: 0 10px;
+}
+
+nav a {
+    color: #ddd;
+    text-decoration: none;
+    font-weight: 400;
+}
+
+.logo {
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 25px;
+    color: #ddd;
+}
+
+img {
+    width: 100%;
 }
