--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -59,13 +59,34 @@ main div {
     padding: 20px;
 }
 
-.products {
-    
+.products {   
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     gap: 10px;
 }
 
+@media (max-width: 1200px) {
+    .products {
+        grid-template-columns: repeat(4, 1fr); 
+    }
+}
+
+@media (max-width: 900px) {
+    .products {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 600px) {
+    .products {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (max-width: 400px) {
+    .products {
+        grid-template-columns: 1fr; 
+    }
+}
 .product-item {
     border: 1px solid #ddd;
     padding: 7px;
