--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -4,7 +4,8 @@ header {
   justify-content: space-between;
   padding: 15px;
   height: auto;
-  position: fixed;
+  top: 0px;
+  position: sticky;
   z-index: 1;
   width: 100%;
 }
@@ -30,9 +31,9 @@ nav a {
   color: white;
 }
 
-main {
+/* main {
   padding-top: 100px;
-}
+} */
 
 img {
   width: 100%;
@@ -61,37 +62,13 @@ main div {
 
 .products {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 10px;
 }
 
-@media (max-width: 1200px) {
-  .products {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-
-@media (max-width: 900px) {
-  .products {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-@media (max-width: 600px) {
-  .products {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (max-width: 400px) {
-  .products {
-    grid-template-columns: 1fr;
-  }
-}
-
 .product-item {
-  border: 1px solid #ddd;
   padding: 7px;
-}
+} 
 
 footer {
   background-color: #722f37;
