--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -6,7 +6,7 @@ header {
   height: auto;
   top: 0px;
   position: sticky;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
 }
 
@@ -90,4 +90,9 @@ footer a {
   color: #ddd;
   text-decoration: none;
   font-size: 13px;
+}
+
+
+.carousel-indicators {
+  z-index: 1;
 }
