--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -16,6 +16,12 @@ nav ul {
   list-style: none;
 }
 
+@media (max-width: 768px) {
+  nav ul {
+    flex-direction: column;
+  }
+}
+
 nav ul li {
   margin: 0 10px;
 }
