--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -100,9 +100,25 @@ footer ul li {
   margin: 0 10px;
 }
 
-footer a {
+.contacts a {
   color: #ddd;
   text-decoration: none;
+  font-size: 13px;
+}
+
+.contacts {
+  display: flex;
+  flex-direction: row;
+}
+
+.contacts h6 {
+  color: #ddd;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.contacts p {
+  color: #ddd;
   font-size: 13px;
 }
 
