--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -32,9 +32,16 @@ nav a {
 }
 
 .logo img {
-  width: 100px;
-  height: 100px;
+  width: 62px;
+  height: 70px;
 }
+
+/* @media(max-width: 440px){
+  .logo img {
+    width: 40px;
+    height: 48px;
+  }
+} */
 
 .logo a{
   font-weight: bold;
@@ -48,9 +55,9 @@ nav a {
   padding-top: 100px;
 } */
 
-/* img {
+img {
   width: 100%;
-} */
+}
 
 main div {
   margin: 10px 0px 10px 0px;
@@ -60,10 +67,6 @@ main div {
   border: 2px solid #ddd;
   border-radius: 20px;
   padding: 20px;
-}
-
-.winery > div {
-  flex: 1;
 }
 
 .winery a {
@@ -76,12 +79,8 @@ main div {
   z-index: 1;
 }
 
-.carousel-inner {
-  height: 400px;
-}
-
 .carousel-inner img {
-  height: 100%;
+  height: 563px;
   object-fit: cover;
   width: 100%;
 }
