--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -48,9 +48,9 @@ nav a {
   padding-top: 100px;
 } */
 
-/* img {
+img {
   width: 100%;
-} */
+}
 
 main div {
   margin: 10px 0px 10px 0px;
@@ -60,10 +60,6 @@ main div {
   border: 2px solid #ddd;
   border-radius: 20px;
   padding: 20px;
-}
-
-.winery > div {
-  flex: 1;
 }
 
 .winery a {
@@ -76,12 +72,8 @@ main div {
   z-index: 1;
 }
 
-.carousel-inner {
-  height: 400px;
-}
-
 .carousel-inner img {
-  height: 100%;
+  height: 563px;
   object-fit: cover;
   width: 100%;
 }
