some beauty changes

--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -3,12 +3,15 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
   padding: 15px;
   height: auto;
+  width: 100%;
+
   top: 0px;
   position: sticky;
   z-index: 2;
-  width: 100%;
+  
 }
 
 nav ul {
@@ -26,15 +29,19 @@ nav ul li {
   margin: 0 10px;
 }
 
+nav ul li a {
+  font-weight: bolder;
+}
+
 nav a {
   color: white;
   text-decoration: none;
 }
 
-.logo img {
+/* .logo img {
   width: 62px;
   height: 70px;
-}
+} */
 
 /* @media(max-width: 440px){
   .logo img {
@@ -133,7 +140,7 @@ footer ul li {
 .footer p {
   color: #ddd;
   font-size: 13px;
-  font-weight: bolder;
+  /* font-weight: bolder; */
 }
 
 .footer p a{
