--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -2,21 +2,21 @@ header {
   background-color: #722f37;
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
 
   padding: 15px;
-  height: auto;
-  width: 100%;
 
   top: 0px;
   position: sticky;
   z-index: 2;
-  
 }
 
 nav ul {
   display: flex;
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 @media (max-width: 768px) {
@@ -27,6 +27,7 @@ nav ul {
 
 nav ul li {
   margin: 0 10px;
+  padding: 7px;
 }
 
 nav ul li a {
@@ -38,8 +39,7 @@ nav a {
   text-decoration: none;
 }
 
-
-.logo a{
+.logo a {
   font-weight: bold;
   text-decoration: none;
   font-size: 25px;
@@ -93,6 +93,14 @@ main div {
   padding: 7px;
 }
 
+.card-title {
+  height: 100%;
+}
+
+.btn {
+  margin-bottom: -8px;
+}
+
 footer {
   background-color: #722f37;
   padding-top: 20px;
@@ -126,12 +134,11 @@ footer ul li {
   font-size: 13px;
 }
 
-.footer p a{
+.footer p a {
   color: #ddd;
   text-decoration: none;
   font-size: 13px;
 }
-
 
 .footer-item {
   display: flex;
@@ -145,5 +152,5 @@ footer ul li {
 }
 
 .footer-item span {
-  margin-right: 4px; 
+  margin-right: 4px;
 }
