--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -85,21 +85,28 @@ main div {
 }
 
 /* .products {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 10px;
-} */
-
-
-.products {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
+} */
+
+.products {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 10px;
 }
 
-.card {
-  width: 200px;
+.new {
+  grid-column: 1 / 3;
+  /* grid-row: 1 / 3; */
+}
+
+.new-header {
+  text-align: center;
+  color: #9f3f4a;
+  padding: 10px;
+  font-weight: bold;
 }
 
 .card-title {
@@ -109,49 +116,6 @@ main div {
 .btn {
   margin-bottom: -8px;
 }
-
-/* .container-partners{
-  border: 2px solid #ddd;
-  border-radius: 20px;
-  padding: 20px;
-}
-
-.partners {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 10px;
-}
-
-.parnetr-item {
-
-} */
-
-.container-partners {
-  border: 2px solid #ddd;
-  border-radius: 20px;
-  padding: 20px;
-  margin: 2rem 0;
-}
-.partners {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Две колонки */
-  grid-template-rows: repeat(2, auto); /* Две строки */
-  gap: 1rem; /* Промежуток между элементами */
-}
-.partner-item {
-  display: flex;
-  justify-content: center; /* Центрируем изображение */
-  align-items: center; /* Центрируем изображение по вертикали */
-}
-.partner-item img {
-  max-width: 100%; /* Ограничиваем ширину изображения */
-  height: auto; /* Автоматическая высота для сохранения пропорций */
-}
-/* Указываем, что третий элемент (Бельгаард) занимает всю высоту второй колонки */
-.partner-item:nth-child(3) {
-  grid-row: span 2; /* Занимает две строки */
-}
-
 
 footer {
   background-color: #722f37;
