--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -99,7 +99,7 @@ main div {
 
 .new {
   grid-column: 1 / 3;
-  /* grid-row: 1 / 3; */
+  grid-row: 1 / 3;
 }
 
 .new-header {
@@ -109,13 +109,23 @@ main div {
   font-weight: bold;
 }
 
+@media (max-width: 768px) {
+  .products {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  }
+  
+  nav ul {
+    flex-direction: column;
+  }
+}
+
 .card-title {
   height: 100%;
 }
 
-.btn {
+/* .btn {
   margin-bottom: -8px;
-}
+} */
 
 footer {
   background-color: #722f37;
