--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -102,11 +102,19 @@ main div {
   grid-row: 1 / 3;
 }
 
-.new-header {
-  text-align: center;
+.new-badge {
+  /* text-align: center; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: #9f3f4a;
   padding: 10px;
   font-weight: bold;
+}
+
+.new-badge span {
+  margin-right: 3px;
+  margin-bottom: 5px;
 }
 
 @media (max-width: 768px) {
