--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -117,9 +117,10 @@ main div {
   margin-bottom: 5px;
 }
 
-@media (max-width: 768px) {
-  .products {
-    grid-template-columns: repeat(auto, 1fr);
+@media (max-width: 576px) {
+  .new {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
   }
 }
 
