map between info and contacts

--- a/corvo/assest/styles/style.css
+++ b/corvo/assest/styles/style.css
@@ -177,3 +177,9 @@ footer ul li {
 .footer-item span {
   margin-right: 4px;
 }
+
+@media(max-width: 972px){
+  .footer {
+    flex-direction: column;
+  }
+}
